<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This edit task has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="newTask_header">Add Task</string>
    <string name="type_todo">To-do</string>
    <string name="type_email">Email</string>
    <string name="type_phone">Phone</string>
    <string name="type_meeting">Meeting</string>
    <string name="type_other">Other</string>
    <string name="title">Title:</string>
    <string name="type_label">Type:</string>
    <string name="title_hint">Enter a title for your task</string>
    <string name="due_date_label">Due Date:</string>
    <string name="description_label">Description:</string>
    <string name="delete">Delete</string>
    <string name="task_placeholder">Task Placeholder</string>
    <string name="date_placeholder">31 / 12 1997</string>
    <string name="status_placeholder">Status</string>
    <string name="task_icon">task icon</string>
    <string name="trash_can_icon">trash can icon</string>
    <string name="due_date">Due Date:</string>
    <string name="status_label">status</string>
    <string name="type_placeholder">type</string>
    <string name="desc_placeholder">desc</string>
    <string name="type_label_det">Type:</string>
    <string name="status_label_details">Status:</string>
    <string name="description_label_det">Description:</string>

    <string-array name="types_array">
        <item>To-do</item>
        <item>Email</item>
        <item>Phone</item>
        <item>Meeting</item>
        <item>Other</item>
    </string-array>
</resources>
