<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails">

    <ImageView
        android:id="@+id/task_icon"
        android:layout_width="@dimen/icon_w"
        android:layout_height="@dimen/icon_h"
        android:layout_marginTop="@dimen/mar_24"
        android:layout_marginEnd="@dimen/mar_28"
        android:layout_marginRight="@dimen/mar_28"
        android:contentDescription="@string/task_icon"
        android:tint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_email"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/date_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_32"
        android:layout_marginLeft="@dimen/mar_32"
        android:text="@string/due_date"
        android:textColor="@color/materialBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_32"
        android:layout_marginLeft="@dimen/mar_32"
        android:text="@string/status_label"
        android:textColor="@color/materialBlack"
        app:layout_constraintBaseline_toBaselineOf="@+id/status_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/status_label" />

    <TextView
        android:id="@+id/date"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_placeholder"
        android:textColor="@color/materialBlack"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/date_label" />

    <TextView
        android:id="@+id/type"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/type_placeholder"
        android:textColor="@color/materialBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/type_label_det"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:id="@+id/desc"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="@dimen/desc_width"
        android:layout_height="@dimen/desc_height"
        android:layout_marginTop="24dp"
        android:text="@string/desc_placeholder"
        android:textColor="@color/materialBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_label_det" />

    <TextView
        android:id="@+id/desc_label_det"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_32"
        android:layout_marginLeft="@dimen/mar_32"
        android:layout_marginTop="@dimen/mar_44"
        android:text="@string/description_label"
        android:textColor="@color/materialBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_label_det"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/type_label"
        android:textColor="@color/materialBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:id="@+id/status_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_32"
        android:layout_marginLeft="@dimen/mar_32"
        android:text="@string/status_label_details"
        android:textColor="@color/materialBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label"
        app:layout_constraintVertical_bias="0.116" />

</androidx.constraintlayout.widget.ConstraintLayout>