<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AddTask">

    <!--
        This vertical linear layout contains all the views in the AddTaskActivity code.
        This includes an EditText to add a task description, and buttons to select a priority
    -->

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->

    <TextView
        android:id="@+id/type_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="53dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:text="Type:"
        android:textColor="@color/materialBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:onClick="onClickAddTask"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="Enter a title for your task"
        android:inputType="textNoSuggestions"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/name_label" />

    <!-- Title label -->
    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:inputType="textCapSentences|textMultiLine"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_label" />

    <!-- EditText for getting task title -->
    <EditText
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Description label -->

    <!-- EditText for getting task descript -->

    <!-- description box -->

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="185dp"
        android:layout_height="39dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/type_label"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/name_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textColor="@color/materialBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Linear layout that contains all three priority buttons (high, medium, low)
            in a single line -->


    <!-- RadioGroup for visible selection of a priority -->


    <TextView
        android:id="@+id/date_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="44dp"
        android:text="Due Date:"
        android:textColor="@color/materialBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskDescription" />

    <TextView
        android:id="@+id/desc_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="172dp"
        android:text="Description:"
        android:textColor="@color/materialBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>